# jukebox-deprecated

./: .editorconfig  .env.sample  .gitignore  .metadata  Dockerfile  LICENSE  Procfile  README.md  alembic.ini  compose.yaml  deployment.ini  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  gunicorn.conf.py  manage.py  migration.py  pubspec.yaml  pyproject.toml  requirements.txt  startServer.py  tasks.py  yoyo.ini
.configs/: server.conf
.run/: Run Migration (Prod).run.xml  Run Migration.run.xml  Run Server (Prod).run.xml  Run Server.run.xml  Server.run.xml  docker_ Compose Deployment.run.xml
android/: gradle.properties
api/: config.py  main.py
app/: __init__.py  main.py  models.py  server.py  version.py
backend/: __init__.py  main.py  server.py  version.py
client_app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
common/: __init__.py  api_version.py  config.py  utils.py
configurations/: app.conf
core/: base.py
db_migrations/: README  alembic.ini  migration.py
deploy/: gunicorn.conf.py
docs/: ProjectX Music Design.xd
jukebox/: __init__.py  api.py  application.py  common.py  commons.py  database.py  events.py  globals.py  jobs.py  main.py  scheduler.py  security.py  settings.py  tasks.py  utils.py
jukebox_bak/: errors.py  globals.py  logger.py  scheduler.py  utils.py
lib/: constants.dart  logging.dart  main.dart  routes.dart
linux/: CMakeLists.txt  my_application.cc
migrations/: 20230106_01_prcCe-create-initial-schema.sql  20230306_01_3Wjq7-initial-schema.sql  20230327_01_JN5tH-initial-schema.sql  README.md
misc/: copyright  development.conf  docker-entrypoint.sh  gunicorn.conf.py
pxm/: __init__.py  __main__.py  base.py  gunicorn.conf.py  gunicorn_config.py  main.py  server.py  settings.py  version.py
pxm_client/: .gitignore  README.md  pubspec.yaml
pxm_commons/: README.md  entity_manager.py  enums.py  errors.py  security.py
pxm_configurations/: README.md  app.conf  db.conf  server.conf
pxm_core/: README.md  base.py  config_loader.py  docs.py  docs_builder.py  migration.py  router.py  security.py
pxm_models/: README.md  entities.py  models.py  schemas.py
pxm_resources/: README.md  album_resource.py  api_resource.py  (+3 more)
(+170 files in other folders)
