[tool.poetry]
name = "jukebox"
version = "0.2.1"
description = "An Open Source Music Streaming App."
authors = ["JukeBox Developers <arpan.mahanty.007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.100.0"
uvicorn = "^0.22.0"
beanie = "^1.20.0"
rocketry = "^2.5.1"
psutil = "^5.9.5"
pyyaml = "^6.0"
email-validator = "^2.0.0.post2"
google-auth = "^2.21.0"

yoyo-migrations = "^8.2.0"
databases = "^0.7.0"
python-slugify = "^8.0.1"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
